--- a/CloudStorageJan2022/src/main/resources/com/geekbrains/cloud/client/client.fxml
+++ b/CloudStorageJan2022/src/main/resources/com/geekbrains/cloud/client/client.fxml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0"
-      prefWidth="370.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+<VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0"
+      xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.geekbrains.cloud.client.ClientController">
-    <ListView fx:id="listView" prefHeight="644.0" prefWidth="370.0"/>
-    <TextField fx:id="textField" editable="false" onAction="#sendMessage" prefHeight="119.0" prefWidth="370.0"/>
+    <GridPane VBox.vgrow="ALWAYS">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        </columnConstraints>
+        <ListView fx:id="listView" GridPane.vgrow="ALWAYS"/>
+        <ListView fx:id="listViewCloud" GridPane.columnIndex="1" GridPane.vgrow="ALWAYS"/>
+        <rowConstraints>
+            <RowConstraints/>
+        </rowConstraints>
+    </GridPane>
+    <TextField fx:id="textField" editable="false" onAction="#sendMessage"/>
 </VBox>
