--- a/CloudStorageNetty/cloud-storage-client/src/main/resources/client.fxml
+++ b/CloudStorageNetty/cloud-storage-client/src/main/resources/client.fxml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="generalPanel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="568.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.coursework.cloudstorage.ClientController">
-    <ListView fx:id="clientView" layoutX="14.0" layoutY="75.0" prefHeight="450.0" prefWidth="300.0" />
-    <ListView fx:id="serverView" layoutX="314.0" layoutY="75.0" prefHeight="450.0" prefWidth="300.0" />
-   <TextArea fx:id="textArea" editable="false" layoutX="315.0" layoutY="75.0" prefHeight="450.0" prefWidth="300.0" visible="false" />
+<AnchorPane fx:id="generalPanel" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.coursework.cloudstorage.ClientController">
+   <GridPane layoutY="76.0" prefHeight="497.0" prefWidth="671.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="440.79998779296875" minWidth="10.0" prefWidth="329.5999755859375" />
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="479.1999969482422" minWidth="10.0" prefWidth="342.4000244140625" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+      
+          <ListView fx:id="clientView" prefHeight="450.0" prefWidth="300.0">
+            <GridPane.margin>
+               <Insets bottom="5.0" left="15.0" right="7.0" top="5.0" />
+            </GridPane.margin>
+         </ListView>
+          <ListView fx:id="serverView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="450.0" prefWidth="300.0" GridPane.columnIndex="1">
+            <GridPane.margin>
+               <Insets bottom="5.0" left="7.0" right="15.0" top="5.0" />
+            </GridPane.margin>
+         </ListView>
+      </children>
+   </GridPane>
+    <TextArea fx:id="textArea" editable="false" layoutX="315.0" layoutY="75.0" prefHeight="450.0" prefWidth="300.0" visible="false" />
     <Button layoutX="112.0" layoutY="39.0" mnemonicParsing="false" onAction="#download" prefHeight="26.0" prefWidth="80.0" text="Скачать" />
     <Button layoutX="14.0" layoutY="39.0" mnemonicParsing="false" onAction="#upload" prefHeight="26.0" prefWidth="90.0" text="Загрузить" />
     <Button fx:id="readFile" layoutX="200.0" layoutY="39.0" mnemonicParsing="false" onAction="#read" prefHeight="26.0" prefWidth="90.0" text="Прочитать" />
-   <MenuButton fx:id="menuBtn" layoutX="300.0" layoutY="39.0" mnemonicParsing="false" text="Disk" />
-   <Button fx:id="newDir" layoutX="370.0" layoutY="39.0" mnemonicParsing="false" onAction="#createNewDir" text="New Dir" />
-   <Button fx:id="newFile" layoutX="455.0" layoutY="39.0" mnemonicParsing="false" onAction="#createNewFile" text="New File" />
-    <TextField fx:id="textField" layoutX="14.0" layoutY="530.0" onAction="#sendMsgAction" prefHeight="26.0" prefWidth="300.0" promptText="Введите сообщение ..." />
-   <Label fx:id="clientLabel" layoutX="324.0" layoutY="530.0" prefHeight="26.0" prefWidth="291.0" text="File info" />
+    <MenuButton fx:id="menuBtn" layoutX="300.0" layoutY="39.0" mnemonicParsing="false" text="Disk" />
+    <Button fx:id="newDir" layoutX="370.0" layoutY="39.0" mnemonicParsing="false" onAction="#createNewDir" text="New Dir" />
+    <Button fx:id="newFile" layoutX="455.0" layoutY="39.0" mnemonicParsing="false" onAction="#createNewFile" text="New File" />
+    <TextField fx:id="textField" layoutX="24.0" layoutY="530.0" onAction="#sendMsgAction" prefHeight="26.0" prefWidth="300.0" promptText="Введите сообщение ..." />
+    <Label fx:id="clientLabel" layoutX="340.0" layoutY="530.0" prefHeight="26.0" prefWidth="291.0" text="File info" />
 </AnchorPane>
